@@ -100,6 +100,9 @@ API Changes
 * LUCENE-6552: Add MergePolicy.OneMerge.getMergeInfo and rename
   setInfo to setMergeInfo (Simon Willnauer, Mike McCandless)
 
+* LUCENE-6525: Deprecate IndexWriterConfig's writeLockTimeout.
+  (Robert Muir)
+
 Bug fixes
 
 * LUCENE-6500: ParallelCompositeReader did not always call
